# microsite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.api  README.md  bash.exe.stackdump  design.md  diagram.md  docker-compose.yml  requirements.md  tasks.md
apps/api/: .dockerignore  Cargo.toml  bash.exe.stackdump  package-lock.json  package.json
apps/api/migrations/: 001_initial_schema.sql  002_crm_schema.sql  003_seed_crm.sql  004_accounting_schema.sql  005_seed_accounting.sql  006_inventory_schema.sql  007_seed_inventory.sql  008_procurement_schema.sql  009_seed_procurement.sql
apps/api/prisma/: schema.prisma  seed.js
apps/api/prisma/migrations/20250820165146_init/: migration.sql
apps/api/prisma/migrations/20250821025928_add_notes_to_lead/: migration.sql
apps/api/prisma/migrations/20250821072648_add_procurement_hr_models/: migration.sql
apps/api/src/: config.rs  index.js  main.rs  routes.rs  seed.js  seed.ts  state.rs
apps/api/src/extractors/: db_conn.rs
apps/api/src/handlers/: accounting.rs  auth.rs  crm.rs  health.rs  hrm.rs  inventory.rs  mod.rs  procurement.rs  tenant.rs  user.rs
apps/api/src/middleware/: auth.ts  auth_layer.rs  auth_middleware.rs  db_conn.rs  error_handler.rs  mod.rs  request_id.rs  tenant_context.rs
apps/api/src/routes/: auth.ts  dashboard.ts  leads.ts  orders.ts  products.ts  users.ts
apps/api/src/services/: auth_service.rs
apps/api/tests/: crm_e2e.rs
apps/web/: .dockerignore  .env.development  index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: ComprehensiveLandingPage.tsx  HashMicroStyleLanding.tsx  LandingPage.tsx  TechDevelopmentStyleLanding.tsx
apps/web/src/components/accounting/: ChartOfAccounts.tsx  JournalEntries.tsx
apps/web/src/components/admin/: UserManagement.tsx
apps/web/src/components/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  PermissionGuard.tsx  ProtectedRoute.tsx  RegisterPage.tsx  SessionInfo.tsx
apps/web/src/components/common/: AdvancedFilter.tsx  ConfirmDialog.tsx  DataTable.tsx  DebugInfo.tsx  EnhancedFormModal.tsx  ErrorBoundary.tsx  FormModal.tsx  LoadingScreen.tsx  NotificationCenter.tsx  PrintExport.tsx  ToastProvider.tsx  index.ts
apps/web/src/components/dashboard/: AccountingPageNew.tsx  AnalyticsPage.tsx  CRMPage.tsx  CRMPageNew.tsx  DashboardLayout.tsx  DashboardOverview.tsx  EnhancedDashboard.tsx  FinancePage.tsx  HRPage.tsx  HRPageNew.tsx  InventoryPage.tsx  InventoryPageNew.tsx  ManufacturingPageNew.tsx  OrdersPage.tsx  OrdersPageNew.tsx  ProcurementPage.tsx  ProfilePage.tsx  ReportsPage.tsx  SettingsPage.tsx
apps/web/src/components/dashboard/widgets/: DashboardWidgets.tsx
apps/web/src/components/forms/: AccountForm.tsx  CategoryForm.tsx  CompanyForm.tsx  ContactForm.tsx  DepartmentForm.tsx  EmployeeForm.tsx  FormSelect.tsx  FormTextField.tsx  JournalEntryForm.tsx  LeadForm.tsx  LeaveRequestForm.tsx  OrderForm.tsx  ProductForm.tsx  StockMovementForm.tsx  TransactionForm.tsx  VendorForm.tsx  WorkOrderForm.tsx
apps/web/src/components/modals/: OrderDetailsModal.tsx
apps/web/src/components/reports/: ReportBuilder.tsx  ReportChart.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useFormValidation.ts  usePermissions.ts  useWebSocket.ts
apps/web/src/modules/accounting/: AccountingLandingPage.tsx  AccountingLoginPage.tsx
apps/web/src/modules/crm/: CRMLandingPage.tsx  CRMLoginPage.tsx
apps/web/src/modules/hr/: HRLandingPage.tsx  HRLoginPage.tsx
apps/web/src/modules/inventory/: InventoryLandingPage.tsx  InventoryLoginPage.tsx
apps/web/src/modules/manufacturing/: ManufacturingLandingPage.tsx  ManufacturingLoginPage.tsx
apps/web/src/modules/procurement/: ProcurementLandingPage.tsx  ProcurementLoginPage.tsx
apps/web/src/pages/: AccountingDashboard.tsx  CRMDashboard.tsx  HRDashboard.tsx  InventoryDashboard.tsx  ManufacturingDashboard.tsx  ProcurementDashboard.tsx
apps/web/src/services/: api.ts  dashboard.ts  modules.ts  tokenService.ts  websocket.ts
apps/web/src/types/: accounting.ts  auth.ts
apps/web/src/utils/: validationSchemas.ts
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  service.rs
crates/core-domain/: Cargo.toml
crates/core-domain/src/: auth.rs  error.rs  events.rs  lib.rs  tenant.rs  user.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: accounting.rs  auth.rs  common.rs  crm.rs  error.rs  inventory.rs  lib.rs  procurement.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
scripts/: dev.bat  dev.sh  init-db.sql
