[workspace]
members = [
    "crates/core-domain",
    "crates/persistence", 
    "crates/auth",
    "crates/telemetry",
    "crates/shared-types",
    "apps/api"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ERP Team <team@erp-platform.com>"]
license = "MIT"
repository = "https://github.com/your-org/multi-service-erp"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres", 
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-jaeger = "0.20"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Rate limiting
tower_governor = "0.5"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }

# Testing
mockall = "0.12"
wiremock = "0.6"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
opt-level = 0
