[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# Workspace crates
shared-types = { path = "../../crates/shared-types" }
core-domain = { path = "../../crates/core-domain" }
auth = { path = "../../crates/auth" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Redis
redis = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Rate limiting
tower_governor = { workspace = true }

# Email
lettre = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
