[package]
name = "persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
shared-types = { path = "../shared-types" }
core-domain = { path = "../core-domain" }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
